# Multiagente_RAG

./: README.md  pyproject.toml
src/it_support_bot/: main.py
src/it_support_bot/agents/: diagnostic_agent.py  resolution_agent.py  user_agent.py
src/it_support_bot/rag/: vector_store.py
src/it_support_bot/rag/chroma_db/: chroma.sqlite3
src/it_support_bot/rag/documents/: faqs.txt
