[project]
name = "it-support-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Alonso",email = "alonavarro@estudiantec.cr"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "openai (>=1.90.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "chromadb (>=1.0.13,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.24,<0.4.0)",
    "unstructured (>=0.17.2,<0.18.0)",
    "pdfminer-six (>=20250506,<20250507)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
    "pi-heif (>=0.22.0,<0.23.0)",
    "unstructured-inference (>=1.0.5,<2.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "it_support_bot", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
